Redesigned navigation, minimised icon sizes, optimised all views on all devices to comply with the new navbar, added animation and designs to the search bar

--- a/src/Pages/Dashboard/Components/Grid/Components/Search_bar/Search_bar.module.css
+++ b/src/Pages/Dashboard/Components/Grid/Components/Search_bar/Search_bar.module.css
@@ -47,3 +47,17 @@
     top: 13px;
     right: 278px;
 }
+
+@supports (-webkit-touch-callout: none) {
+    
+    .icon, .active_icon {
+
+        right: 285px;
+
+    }
+    
+    .active_icon {
+        right: 288px;
+    }
+
+  }
