--- a/src/Pages/Form/Form.module.css
+++ b/src/Pages/Form/Form.module.css
@@ -22,7 +22,7 @@
         margin-left: 20px;
         display: flex;
         flex-direction: column;
-        margin-top: 30px
+        margin-top: 20px
     }
     .title {
         font-size: 28px;
@@ -84,13 +84,14 @@
 /* Small portrait tablet */
 
 @media (min-height:700px) and (min-width: 500px) and (max-height: 950px) and (max-width: 700px) {
+
     .title {
-        font-size: 50px;
+        font-size: 40px;
         margin: 0;
         margin-top: 20px;
     }
     .form_message {
-        font-size: 40px;
+        font-size: 30px;
         margin-top: 15px;
         width: 80%;
     }
@@ -120,35 +121,47 @@
 
 @media (min-height:700px) and (min-width: 500px) and (max-height: 1050px) and (max-width: 800px) {
     .title {
-        font-size: 60px;
+        font-size: 40px;
         margin: 0;
         padding: 0;
         margin-top: 20px;
     }
     .form_message {
-        font-size: 45px;
+        font-size: 30px;
         margin-top: 20px;
     }
     .form_container {
         margin-top: 40px;
+    }
+
+    @supports (-webkit-touch-callout: none) {
+
+        .form_container{
+            margin-left: 50px;
+        }
+ 
     }
 }
 
 /* medium landscape tablet */
 
 @media (min-height:400px) and (min-width: 800px) and (max-height: 750px) and (max-width: 1199px) {
+
     .form_container {
         margin-top: 20px;
+        padding-bottom: 100px;
+        overflow-y: scroll;
+        margin-left: 80px;
     }
     .title {
-        font-size: 60px;
+        font-size: 35px;
         margin: 0;
         padding: 0;
         margin-top: 20px;
     }
     .form_message {
-        font-size: 45px;
-        margin-top: 20px;
+        font-size: 30px;
+        margin-top: 10px;
     }
     .page_container {
         height: 100%;
@@ -178,6 +191,15 @@
     .go_back_button:hover {
         cursor: pointer;
     }
+
+    @supports (-webkit-touch-callout: none) {
+
+        .form_container{
+            margin-top: 40px;
+        }
+ 
+    }
+
 }
 
 /* large portrait tablet */
@@ -193,8 +215,8 @@
         margin-top: 15px;
     }
     .form_container {
-        margin-top: 50px;
-        margin-left: 100px;
+        margin-top: 150px;
+        margin-left: 140px;
     }
 }
 
@@ -276,17 +298,23 @@
 
 /* large landscape tablet */
 
-@media (width:1366px) and (height:954px) {
-    .title {
-        margin: 0;
+@media (width:1366px) and (min-height:900px) {
 
-    }
-    .form_message {
-        margin-top: 20px;
-    }
-    .form_container {
-        margin-left: 200px;
-        margin-top: 50px;
-        width: 800px;
-    }
+    @supports (-webkit-touch-callout: none) {
+    
+        .title {
+            margin: 0;
+    
+        }
+        .form_message {
+            margin-top: 20px;
+        }
+        .form_container {
+            margin-left: 200px;
+            margin-top: 150px;
+            width: 800px;
+        }
+      }
+
+
 }
