--- a/src/Shared Components/Icon_bar/Components/Icon/Icon.module.css
+++ b/src/Shared Components/Icon_bar/Components/Icon/Icon.module.css
@@ -7,6 +7,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    position: relative;
 }
 
 .container:hover{
@@ -16,4 +17,12 @@
 .icon {
     height: 40px;
     width: 40px;
+}
+
+.text{
+    position: absolute;
+    top: 62px;
+    font-weight: 900;
+    white-space: nowrap;
+    overflow: hidden;
 }
