Fixed a small bug with the search bar not handling empty strings properly, added page transitions to all pages

--- a/src/App.css
+++ b/src/App.css
@@ -12,5 +12,6 @@ html{
 .App{
   height: 100%;
   background-color: #F8F8FF;
-  font-family: 'Exo 2', sans-serif
+  font-family: 'Exo 2', sans-serif;
+  overflow-y: hidden;
 }
