--- a/src/Pages/Dashboard/Dashboard.module.css
+++ b/src/Pages/Dashboard/Dashboard.module.css
@@ -4,7 +4,30 @@
     flex-direction: column;
     align-items: center;
     position: relative;
+    position: relative;
+    overflow-x: hidden;
+    overflow-y: scroll;
+    -ms-overflow-style: none;
+    animation: fadein 2s forwards;
+    animation-delay: 1s;
+    opacity: 0;
 }
+
+@keyframes fadein {
+
+    0%{
+        opacity: 0;
+    }
+    100%{
+        opacity: 100%;
+    }
+}
+
+.container::-webkit-scrollbar {
+    display: none;
+}
+
+
 
 .mobile_chart_container {
     width: 330px;
