--- a/src/Pages/Form/Form.module.css
+++ b/src/Pages/Form/Form.module.css
@@ -12,11 +12,14 @@
     .container {
         width: 100%;
         height: 100%;
-        animation: slide-left 0.1s forwards;
         position: fixed;
         right: -50vw;
         overflow-y: scroll;
+        animation: fadein 2s forwards;
+        animation-delay: 1s;
+        opacity: 0;
     }
+
     .form_container {
         font-family: 'Roboto', sans-serif;
         margin-left: 20px;
@@ -63,7 +66,6 @@
     flex-direction: column;
     align-items: center;
     padding-bottom: 100px;
-   
 }
 
 .go_back_button {
@@ -84,7 +86,6 @@
 /* Small portrait tablet */
 
 @media (min-height:700px) and (min-width: 500px) and (max-height: 950px) and (max-width: 700px) {
-
     .title {
         font-size: 40px;
         margin: 0;
@@ -133,20 +134,16 @@
     .form_container {
         margin-top: 40px;
     }
-
     @supports (-webkit-touch-callout: none) {
-
-        .form_container{
+        .form_container {
             margin-left: 50px;
         }
- 
     }
 }
 
 /* medium landscape tablet */
 
 @media (min-height:400px) and (min-width: 800px) and (max-height: 750px) and (max-width: 1199px) {
-
     .form_container {
         margin-top: 20px;
         padding-bottom: 100px;
@@ -191,15 +188,11 @@
     .go_back_button:hover {
         cursor: pointer;
     }
-
     @supports (-webkit-touch-callout: none) {
-
-        .form_container{
+        .form_container {
             margin-top: 40px;
         }
- 
     }
-
 }
 
 /* large portrait tablet */
@@ -226,10 +219,11 @@
     .container {
         width: 100%;
         height: 100%;
-        animation: slide-left 0.5s forwards;
+        animation: fadein 2s forwards;
         position: fixed;
-        right: -50vw;
         display: flex;
+        animation-delay: 1s;
+        opacity: 0;
     }
     .form_container {
         display: flex;
@@ -244,7 +238,6 @@
         font-family: 'Roboto', sans-serif;
         margin-left: 0px;
         margin: 0;
-
     }
     .form_message {
         font-size: 30px;
@@ -299,12 +292,9 @@
 /* large landscape tablet */
 
 @media (width:1366px) and (min-height:900px) {
-
     @supports (-webkit-touch-callout: none) {
-    
         .title {
             margin: 0;
-    
         }
         .form_message {
             margin-top: 20px;
@@ -314,7 +304,14 @@
             margin-top: 150px;
             width: 800px;
         }
-      }
+    }
+}
 
-
+@keyframes fadein {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 100%;
+    }
 }
