--- a/src/Shared Components/Icon_bar/Icon_bar.module.css
+++ b/src/Shared Components/Icon_bar/Icon_bar.module.css
@@ -1,6 +1,6 @@
 .container {
     display: flex;
-    width: 100%;
+    width: 100vw;
     justify-content: space-evenly;
     align-items: center;
     position: fixed;
