--- a/src/Util/Animations.module.css
+++ b/src/Util/Animations.module.css
@@ -45,3 +45,29 @@
     }
     
 }
+
+.page_animated{
+
+    animation: page_transition 1s;
+
+}
+
+@keyframes page_transition {
+
+    0%{
+        left: 100vw;
+        background-color: green;
+
+    }
+    50%{
+  
+        left: 50vw;
+        background-color: blue;
+    }
+    100%{
+
+        left: 0vw;
+        background: red;
+    }
+    
+}
