--- a/src/App.css
+++ b/src/App.css
@@ -15,3 +15,10 @@ html{
   font-family: 'Exo 2', sans-serif;
   overflow-y: hidden;
 }
+
+.page{
+  position: absolute;
+  top: 100px;
+  left: 0;
+  right: 0;
+}
