--- a/src/Pages/Form/Components/Book/Book.module.css
+++ b/src/Pages/Form/Components/Book/Book.module.css
@@ -12,7 +12,7 @@
 
 .card {
     width: 250px;
-    height: 340px;
+    height: 320px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -45,15 +45,15 @@
 
 .details_container {
     width: 100%;
-    background-color: white;
     position: relative;
+    
 }
 
 .year, .condition {
     position: relative;
     font-family: 'Roboto', sans-serif;
     font-weight: 900;
-    top: 10px;
+    top: -10px;
     left: 25px;
     font-size: 25px;
 }
@@ -61,6 +61,7 @@
 .condition {
     font-weight: 600;
     font-size: 20px;
+    margin-top: -20px;
 }
 
 .button_container {
