--- a/src/Pages/Donut/Donut.module.css
+++ b/src/Pages/Donut/Donut.module.css
@@ -4,7 +4,7 @@
     justify-content: center;
     align-items: center;
     position: relative;
-    margin-top: 42px;
+    margin-top: 82px;
 }
 
 .left_patch, .right_patch {
@@ -35,7 +35,7 @@
 
 .percent {
     position: fixed;
-    top: 208px;
+    top: 198px;
     font-family: 'Roboto', sans-serif;
     font-size: 40px;
     font-weight: 900;
@@ -88,6 +88,14 @@
     }
 }
 
+/* medium landscape tablet */
+
+@media (min-height:400px) and (min-width: 800px) and (max-height: 750px) and (max-width: 1199px) {
+
+    .chart_wrapper{
+        margin-top: 20px;
+    }
+}
 /* medium portrait tablet */
 
 @media (min-height:800px) and (min-width: 701px) and (max-width: 1100px) {
@@ -97,7 +105,6 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        margin-left: 50px;
     }
     .card_container {
         margin-top: 50px;
@@ -120,7 +127,7 @@
 
 @media (min-height:1200px) and (min-width: 1000px) {
     .percent {
-        margin-top: 130px;
+        margin-top: 50px;
     }
 }
 
