--- a/src/Shared Components/Icon_bar/Icon_bar.module.css
+++ b/src/Shared Components/Icon_bar/Icon_bar.module.css
@@ -10,5 +10,17 @@
     padding: 10px 0;
     padding-bottom: 40px;
     font-family: 'Roboto', sans-serif;
-    z-index: 10000;
+    z-index: 900000000;
+ 
+}
+
+.tutorial_overlay{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: #f8f8ff;
+    padding-bottom: 10px;
+    margin-top: 10px;
+    z-index: 900000001;
+    
 }
